--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <form>
-      <label for="mail">
-        I would like you to provide me with an email address:
-      </label>
-      <input type="email" id="mail" name="mail" />
+    <form novalidate>
+      <p>
+        <label for="mail">
+          <span>Please enter an email address:</span>
+          <input type="email" id="mail" name="mail" required minlength="8" />
+          <span class="error" aria-live="polite"></span>
+        </label>
+      </p>
       <button>Submit</button>
     </form>
   </body>
