Example that does not use the Constraint Validation API

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <form novalidate>
+    <form>
       <p>
         <label for="mail">
           <span>Please enter an email address:</span>
-          <input type="email" id="mail" name="mail" required minlength="8" />
+          <input type="text" id="mail" name="mail" />
           <span class="error" aria-live="polite"></span>
         </label>
       </p>
