--- a/userInfoForm.html
+++ b/userInfoForm.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="userInfoForm.js" defer></script>
   </head>
   <body>
     <form action="" novalidate>
       <label for="mail">Email: </label>
-      <input type="email" id="mail" name="email" required minlength="8" />
+      <input id="mail" name="email" type="email" minlength="8" required />
       <span class="error"></span>
       <div>
         <button>Submit</button>
