--- a/userInfoForm.html
+++ b/userInfoForm.html
@@ -9,9 +9,29 @@
   </head>
   <body>
     <form action="" novalidate>
-      <label for="mail">Email: </label>
-      <input id="mail" name="email" type="email" minlength="8" required />
-      <span class="error"></span>
+      <div>
+        <label for="mail">Email: </label>
+        <input id="mail" name="email" type="email" minlength="8" required />
+        <span class="error"></span>
+      </div>
+
+      <div>
+        <label for="zip">Zip Code: </label>
+        <input id="zip" name="zipcode" type="text" />
+        <span class="error"></span>
+      </div>
+
+      <div>
+        <label for="country">Country: </label>
+        <select name="country" id="country">
+          <option value="ch">Switzerland</option>
+          <option value="fr">France</option>
+          <option value="de">Germany</option>
+          <option value="nl">The Netherlands</option>
+        </select>
+        <span class="error"></span>
+      </div>
+
       <div>
         <button>Submit</button>
       </div>
