--- a/userInfoForm.html
+++ b/userInfoForm.html
@@ -33,6 +33,15 @@
       </div>
 
       <div>
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" />
+      </div>
+      <div>
+        <label for="password-confirm">Password</label>
+        <input type="password" id="password-confirm" name="password-confirm" />
+      </div>
+
+      <div>
         <button>Submit</button>
       </div>
     </form>
