Pick up password elements in javascript

--- a/userInfoForm.html
+++ b/userInfoForm.html
@@ -29,16 +29,17 @@
           <option value="de">Germany</option>
           <option value="nl">The Netherlands</option>
         </select>
-        <span class="error" id="country-error"></span>
       </div>
 
       <div>
         <label for="password">Password</label>
         <input type="password" id="password" name="password" />
+        <span class="error" id="password-error"></span>
       </div>
       <div>
         <label for="password-confirm">Password</label>
         <input type="password" id="password-confirm" name="password-confirm" />
+        <span class="error" id="password-confirm-error"></span>
       </div>
 
       <div>
