--- a/userInfoForm.html
+++ b/userInfoForm.html
@@ -33,12 +33,17 @@
 
       <div>
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" />
+        <input type="password" id="password" name="password" class="invalid" />
         <span class="error" id="password-error"></span>
       </div>
       <div>
         <label for="password-confirm">Password</label>
-        <input type="password" id="password-confirm" name="password-confirm" />
+        <input
+          type="password"
+          id="password-confirm"
+          name="password-confirm"
+          class="invalid"
+        />
         <span class="error" id="password-confirm-error"></span>
       </div>
 
